--- a/custom_components/itchio/manifest.json
+++ b/custom_components/itchio/manifest.json
@@ -2,12 +2,12 @@
   "domain": "itchio",
   "name": "Itch.io Integration",
   "after_dependencies": ["http"],
-  "version": "0.1.0",
-  "documentation": "https://github.com/Hermesiss/itchio_homeassistant",
-  "requirements": [],
-  "issue_tracker": "https://github.com/Hermesiss/itchio_homeassistant/issues",
   "codeowners": ["@Hermesiss"],
-  "iot_class": "cloud_polling",
+  "config_flow": true,
+  "documentation": "https://github.com/Hermesiss/itchio_homeassistant",
   "integration_type": "hub",
-  "config_flow": true
+  "iot_class": "cloud_polling",
+  "issue_tracker": "https://github.com/Hermesiss/itchio_homeassistant/issues",
+  "requirements": [],
+  "version": "0.2.0"
 }
