--- a/custom_components/itchio/manifest.json
+++ b/custom_components/itchio/manifest.json
@@ -2,12 +2,12 @@
   "domain": "itchio",
   "name": "Itch.io Integration",
   "after_dependencies": ["http"],
-  "codeowners": ["Hermesiss"],
+  "codeowners": ["@Hermesiss"],
   "config_flow": true,
   "documentation": "https://github.com/Hermesiss/itchio_homeassistant",
   "integration_type": "hub",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/Hermesiss/itchio_homeassistant/issues",
   "requirements": [],
-  "version": "0.4.0"
+  "version": "0.4.1"
 }
